# roman_lightcurves

./: LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
data/: roman_kilonova_example_lightcurve.csv  roman_kilonova_example_model_lightcurves.txt  roman_kilonova_red_example_lightcurve.csv  roman_kilonova_red_example_model_lightcurves.txt  txs0506_ratan600_digitized.csv
lightcurves/: __init__.py  agn_blazar_sn_lightcurves.py  combined_lightcurves.py  roman_bands.py  roman_kilonova.py  roman_kilonova_combined.py  roman_kilonova_red.py  roman_kilonova_red_combined.py  sniib_mcmc_fit.py
mcmc_results/: sniib_mcmc_best_theta.npy  sniib_mcmc_chain.npy  sniib_mcmc_result.json
scripts/: run_agn_blazar_sn_lightcurves.py  run_combined_lightcurves.py  run_roman_kilonova_combined.py  run_roman_kilonova_example.py  run_roman_kilonova_red_combined.py  run_roman_kilonova_red_example.py  run_sniib_mcmc.py
